--- a/src/c4s-all.scss
+++ b/src/c4s-all.scss
@@ -1,10 +1,14 @@
 /*
-   All viewports combined, including non-responsive styles
+ *  All viewports combined, including non-responsive styles
  */
 
-@use 'c4s-base';
-@use 'c4s-s';
-@use 'c4s-m';
-@use 'c4s-l';
-@use 'c4s-h';
-// @use 'c4s-p'; // Optionally include print media
+@use 'variables';
+@use 'modules/responsive-all';
+@use 'modules/non-responsive-all';
+
+@include non-responsive-all.non-responsive-all();
+@include responsive-all.responsive-all();
+
+@each $name, $map in variables.$breakpoints {
+  @include responsive-all.responsive-all($name);
+}
