--- a/src/c4s-m.scss
+++ b/src/c4s-m.scss
@@ -1,9 +1,9 @@
 /*
-   Medium viewports
+ *  Medium viewports
  */
 
 @use 'modules/responsive-all';
+@use 'modules/non-responsive-all';
 
-@media only screen and (min-width: 30em) {
-  @include responsive-all.responsive-all(-m);
-}
+@include non-responsive-all.non-responsive-all();
+@include responsive-all.responsive-all(m);
