--- a/src/c4s-p.scss
+++ b/src/c4s-p.scss
@@ -1,9 +1,9 @@
 /*
-   Print media
+ *  Print media
  */
 
 @use 'modules/responsive-all';
+@use 'modules/non-responsive-all';
 
-@media only print {
-  @include responsive-all.responsive-all(-p);
-}
+@include non-responsive-all.non-responsive-all();
+@include responsive-all.responsive-all(p);
