--- a/src/c4s-s.scss
+++ b/src/c4s-s.scss
@@ -1,9 +1,9 @@
 /*
-   Small viewports
+ *  Small viewports
  */
 
 @use 'modules/responsive-all';
+@use 'modules/non-responsive-all';
 
-@media only screen and (min-width: 20em) {
-  @include responsive-all.responsive-all(-s);
-}
+@include non-responsive-all.non-responsive-all();
+@include responsive-all.responsive-all(s);
