--- a/src/modules/_non-responsive-all.scss
+++ b/src/modules/_non-responsive-all.scss
@@ -28,3 +28,30 @@
 @use 'non-responsive/cursor';
 @use 'non-responsive/miscellaneous';
 @use 'non-responsive/debug';
+
+@mixin non-responsive-all() {
+  @include complex.complex();
+  @include reset.reset();
+  @include color.color();
+  @include hover-color.hover-color();
+  @include background-color.background-color();
+  @include hover-background-color.hover-background-color();
+  @include border.border();
+  @include border-width.border-width();
+  @include border-color.border-color();
+  @include border-style.border-style();
+  @include font-family.font-family();
+  @include font-style.font-style();
+  @include text-decoration.text-decoration();
+  @include text-shadow.text-shadow();
+  @include text-transform.text-transform();
+  @include text-align.text-align();
+  @include opacity.opacity();
+  @include transform.transform();
+  @include transition.transition();
+  @include visibility.visibility();
+  @include box-sizing.box-sizing();
+  @include cursor.cursor();
+  @include miscellaneous.miscellaneous();
+  @include debug.debug();
+}
