--- a/src/modules/non-responsive/box-sizing.scss
+++ b/src/modules/non-responsive/box-sizing.scss
@@ -1,10 +1,12 @@
 @use '../../functions';
 @use '../../variables';
 
-#{functions.construct-class-name(variables.$global-prefix, border-box)} {
-  box-sizing: border-box;
-}
+@mixin box-sizing() {
+  #{functions.construct-class-name(variables.$global-prefix, border-box)} {
+    box-sizing: border-box;
+  }
 
-#{functions.construct-class-name(variables.$global-prefix, content-box)} {
-  box-sizing: content-box;
+  #{functions.construct-class-name(variables.$global-prefix, content-box)} {
+    box-sizing: content-box;
+  }
 }
