--- a/src/modules/non-responsive/color.scss
+++ b/src/modules/non-responsive/color.scss
@@ -1,8 +1,10 @@
 @use '../../functions';
 @use '../../variables';
 
-@each $color, $value in variables.$colors {
-  #{functions.construct-class-name(variables.$global-prefix, $color)} {
-    color: $value;
+@mixin color() {
+  @each $color, $value in variables.$colors {
+    #{functions.construct-class-name(variables.$global-prefix, $color)} {
+      color: $value;
+    }
   }
 }
