--- a/src/modules/non-responsive/cursor.scss
+++ b/src/modules/non-responsive/cursor.scss
@@ -1,10 +1,10 @@
 @use '../../functions';
 @use '../../variables';
 
-$cursors: pointer, text, none, not-allowed, progress, wait;
-
-@each $cursor in $cursors {
-  #{functions.construct-class-name(variables.$global-prefix, cursor, $cursor)} {
-    cursor: $cursor;
+@mixin cursor() {
+  @each $cursor in variables.$cursors {
+    #{functions.construct-class-name(variables.$global-prefix, cursor, $cursor)} {
+      cursor: $cursor;
+    }
   }
 }
