--- a/src/modules/non-responsive/hover-background-color.scss
+++ b/src/modules/non-responsive/hover-background-color.scss
@@ -1,8 +1,10 @@
 @use '../../functions';
 @use '../../variables';
 
-@each $color, $value in variables.$colors {
-  #{functions.construct-class-name(variables.$global-prefix, hover-bg, $color)}:hover {
-    background-color: $value;
+@mixin hover-background-color() {
+  @each $color, $value in variables.$colors {
+    #{functions.construct-class-name(variables.$global-prefix, hover-bg, $color)}:hover {
+      background-color: $value;
+    }
   }
 }
