--- a/src/modules/non-responsive/miscellaneous.scss
+++ b/src/modules/non-responsive/miscellaneous.scss
@@ -1,32 +1,34 @@
 @use '../../functions';
 @use '../../variables';
 
-#{functions.construct-class-name(variables.$global-prefix, list-reset)} {
-  list-style: none;
-  padding-left: 0;
-  margin-top: 0;
-  margin-bottom: 0;
-}
+@mixin miscellaneous() {
+  #{functions.construct-class-name(variables.$global-prefix, list-reset)} {
+    list-style: none;
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 
-#{functions.construct-class-name(variables.$global-prefix, stretch)} {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
+  #{functions.construct-class-name(variables.$global-prefix, stretch)} {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
 
-#{functions.construct-class-name(variables.$global-prefix, stretch-pseudo)}::after {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  pointer-events: auto;
-  content: '';
-  background-color: transparent;
-}
+  #{functions.construct-class-name(variables.$global-prefix, stretch-pseudo)}::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    pointer-events: auto;
+    background-color: transparent;
+  }
 
-#{functions.construct-class-name(variables.$global-prefix, link)} {
-  text-decoration: none;
+  #{functions.construct-class-name(variables.$global-prefix, link)} {
+    text-decoration: none;
+  }
 }
