--- a/src/modules/non-responsive/opacity.scss
+++ b/src/modules/non-responsive/opacity.scss
@@ -1,8 +1,10 @@
 @use '../../functions';
 @use '../../variables';
 
-@each $opacity, $value in variables.$opacity-levels {
-  #{functions.construct-class-name(variables.$global-prefix, variables.$opacity-name, $opacity)} {
-    opacity: $value;
+@mixin opacity() {
+  @each $opacity, $value in variables.$opacity-levels {
+    #{functions.construct-class-name(variables.$global-prefix, variables.$opacity-name, $opacity)} {
+      opacity: $value;
+    }
   }
 }
