--- a/src/modules/non-responsive/text-align.scss
+++ b/src/modules/non-responsive/text-align.scss
@@ -1,15 +1,10 @@
 @use '../../functions';
 @use '../../variables';
 
-$text-aligns: (
-  l: left,
-  r: right,
-  c: center,
-  j: justify
-);
-
-@each $name, $value in $text-aligns {
-  #{functions.construct-class-name(variables.$global-prefix, t + $name)} {
-    text-align: $value;
+@mixin text-align() {
+  @each $name, $value in variables.$text-aligns {
+    #{functions.construct-class-name(variables.$global-prefix, t + $name)} {
+      text-align: $value;
+    }
   }
 }
