--- a/src/modules/non-responsive/text-decoration.scss
+++ b/src/modules/non-responsive/text-decoration.scss
@@ -1,14 +1,10 @@
 @use '../../functions';
 @use '../../variables';
 
-$text-decorations: (
-  underline: underline,
-  line-through: line-through,
-  strike: line-through
-);
-
-@each $name, $value in $text-decorations {
-  #{functions.construct-class-name(variables.$global-prefix, $name)} {
-    text-decoration: $value;
+@mixin text-decoration() {
+  @each $name, $value in variables.$text-decorations {
+    #{functions.construct-class-name(variables.$global-prefix, $name)} {
+      text-decoration: $value;
+    }
   }
 }
