--- a/src/modules/non-responsive/transition.scss
+++ b/src/modules/non-responsive/transition.scss
@@ -1,9 +1,11 @@
 @use '../../functions';
 @use '../../variables';
 
-// Transition transforms
-@each $level, $value in variables.$transition-speeds {
-  #{functions.construct-class-name(variables.$global-prefix, transition-transform, $level)} {
-    transition: transform $value ease-in-out;
+@mixin transition() {
+  // Transition transforms
+  @each $level, $value in variables.$transition-speeds {
+    #{functions.construct-class-name(variables.$global-prefix, transition-transform, $level)} {
+      transition: transform $value ease-in-out;
+    }
   }
 }
